add dsc_0490 to 未名湖畔

--- a/_posts/2016-03-25-未名湖畔.md
+++ b/_posts/2016-03-25-未名湖畔.md
@@ -3,8 +3,5 @@ layout: post
 title: 未名湖畔
 ---
 
-| Focal Length | Aperture | Shutter Speed | ISO Sensitivity |
-|:------------:|:--------:|:-------------:|:---------------:|
-| 18mm         | f/3.5    | 1/320s          | ISO 100        |
-
-![未名湖畔](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_0456.JPG)
+![未名湖畔 1/2](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_0456.JPG)
+![未名湖畔 2/2](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_0490.JPG)
