yaca add dsc_3927

--- a/_posts/2016-04-30-YACA.md
+++ b/_posts/2016-04-30-YACA.md
@@ -6,3 +6,5 @@ title: 48th YACA
 ![YACA 1](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_3889.JPG)
 
 ![YACA 2](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_3896.JPG)
+
+![YACA 3](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_3927.JPG)
