--- a/_posts/2016-05-15-南校暮雨.md
+++ b/_posts/2016-05-15-南校暮雨.md
@@ -3,4 +3,5 @@ layout: post
 title: 南校暮雨
 ---
 
-![南校暮雨](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_5034.JPG)
+![南校暮雨 1/2](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_5034.JPG)
+![南校暮雨 2/2](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_5044.JPG)
