image file rename

--- a/_posts/2016-05-28-猎德大桥.md
+++ b/_posts/2016-05-28-猎德大桥.md
@@ -3,4 +3,4 @@ layout: post
 title: 猎德大桥
 ---
 
-![猎德大桥](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_5786.JPG)
+![猎德大桥](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_5786.jpg)
