--- a/_posts/2016-05-28-猎德大桥.md
+++ b/_posts/2016-05-28-猎德大桥.md
@@ -4,4 +4,4 @@ title: 猎德大桥
 ---
 
 ![猎德大桥 1/2](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_5786.jpg)
-![猎德大桥 2/2](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_5856.jpg)
+![猎德大桥 2/2](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_5856.JPG)
