--- a/_posts/2016-06-21-The-Moon.md
+++ b/_posts/2016-06-21-The-Moon.md
@@ -3,4 +3,4 @@ layout: post
 title: The Moon
 ---
 
-![The Moon](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_6692.JPG)
+<img src="https://github.com/comacros/comacros.github.io/raw/master/images/DSC_6692.JPG" alt="The Moon" onclick="javascript:enlarge(this)" class="toEnlarge" >
