--- a/_posts/2016-09-14-广州塔.md
+++ b/_posts/2016-09-14-广州塔.md
@@ -3,4 +3,4 @@ layout: post
 title: 广州塔
 ---
 
-![The Moon](https://github.com/comacros/comacros.github.io/raw/master/images/GuangzhouTower2016.JPG)
+<img src="https://github.com/comacros/comacros.github.io/raw/master/images/GuangzhouTower2016.JPG" alt="广州塔" onclick="javascript:enlarge(this)" class="toEnlarge" >
