--- a/_posts/2016-06-09-海珠湖荷花.md
+++ b/_posts/2016-06-09-海珠湖荷花.md
@@ -3,5 +3,5 @@ layout: post
 title: 海珠湖荷花
 ---
 
-![海珠湖荷花 1/2](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_6159.JPG)
-![海珠湖荷花 2/2](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_6202.JPG)
+<img src="https://github.com/comacros/comacros.github.io/raw/master/images/DSC_6159.JPG" alt="海珠湖荷花 1/2" onclick="javascript:enlarge(this)" class="toEnlarge" >
+<img src="https://github.com/comacros/comacros.github.io/raw/master/images/DSC_6202.JPG" alt="海珠湖荷花 2/2" onclick="javascript:enlarge(this)" class="toEnlarge" >
