update img tag format

--- a/_posts/2016-06-09-海珠湖向日葵.md
+++ b/_posts/2016-06-09-海珠湖向日葵.md
@@ -3,8 +3,8 @@ layout: post
 title: 海珠湖向日葵
 ---
 
-![海珠湖向日葵 1/5](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_6246.JPG)
-![海珠湖向日葵 2/5](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_6251.JPG)
-![海珠湖向日葵 3/5](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_6258.JPG)
-![海珠湖向日葵 4/5](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_6277.JPG)
-![海珠湖向日葵 5/5](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_6287.JPG)
+<img src="https://github.com/comacros/comacros.github.io/raw/master/images/DSC_6246.JPG" alt="海珠湖向日葵 1/5" onclick="javascript:enlarge(this)" class="toEnlarge" >
+<img src="https://github.com/comacros/comacros.github.io/raw/master/images/DSC_6251.JPG" alt="海珠湖向日葵 2/5" onclick="javascript:enlarge(this)" class="toEnlarge" >
+<img src="https://github.com/comacros/comacros.github.io/raw/master/images/DSC_6258.JPG" alt="海珠湖向日葵 3/5" onclick="javascript:enlarge(this)" class="toEnlarge" >
+<img src="https://github.com/comacros/comacros.github.io/raw/master/images/DSC_6277.JPG" alt="海珠湖向日葵 4/5" onclick="javascript:enlarge(this)" class="toEnlarge" >
+<img src="https://github.com/comacros/comacros.github.io/raw/master/images/DSC_6287.JPG" alt="海珠湖向日葵 5/5" onclick="javascript:enlarge(this)" class="toEnlarge" >
