update img tag format

--- a/_posts/2016-05-12-夏堇.md
+++ b/_posts/2016-05-12-夏堇.md
@@ -3,5 +3,5 @@ layout: post
 title: 夏堇
 ---
 
-![夏堇 1/2](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_4394.JPG)
-![夏堇 2/2](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_4395.JPG)
+<img src="https://github.com/comacros/comacros.github.io/raw/master/images/DSC_4394.JPG" alt="夏堇 1/2" onclick="javascript:enlarge(this)" class="toEnlarge" >
+<img src="https://github.com/comacros/comacros.github.io/raw/master/images/DSC_4395.JPG" alt="夏堇 2/2" onclick="javascript:enlarge(this)" class="toEnlarge" >
