--- a/_posts/2016-05-14-睡莲.md
+++ b/_posts/2016-05-14-睡莲.md
@@ -3,4 +3,4 @@ layout: post
 title: 睡莲
 ---
 
-![睡莲](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_4696.JPG)
+<img src="https://github.com/comacros/comacros.github.io/raw/master/images/DSC_4696.JPG" alt="睡莲" onclick="javascript:enlarge(this)" class="toEnlarge" >
