--- a/_posts/2016-05-15-南校暮雨.md
+++ b/_posts/2016-05-15-南校暮雨.md
@@ -3,5 +3,5 @@ layout: post
 title: 南校暮雨
 ---
 
-![南校暮雨 1/2](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_5034.JPG)
-![南校暮雨 2/2](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_5044.JPG)
+<img src="https://github.com/comacros/comacros.github.io/raw/master/images/DSC_5034.JPG" alt="南校暮雨 1/2" onclick="javascript:enlarge(this)" class="toEnlarge" >
+<img src="https://github.com/comacros/comacros.github.io/raw/master/images/DSC_5044.JPG" alt="南校暮雨 2/2" onclick="javascript:enlarge(this)" class="toEnlarge" >
