--- a/_posts/2016-05-20-520.md
+++ b/_posts/2016-05-20-520.md
@@ -3,4 +3,4 @@ layout: post
 title: 520
 ---
 
-![520](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_5318.JPG)
+<img src="https://github.com/comacros/comacros.github.io/raw/master/images/DSC_5318.JPG" alt="520" onclick="javascript:enlarge(this)" class="toEnlarge" >
