update img tag format

--- a/_posts/2016-03-29-帝都前海.md
+++ b/_posts/2016-03-29-帝都前海.md
@@ -3,6 +3,6 @@ layout: post
 title: 帝都前海
 ---
 
-![前海-1](https://github.com/comacros/comacros.github.io/raw/master/images/2016-03-29-前海-1.jpg)
-![前海-2](https://github.com/comacros/comacros.github.io/raw/master/images/2016-03-29-前海-2.jpg)
-![前海-3](https://github.com/comacros/comacros.github.io/raw/master/images/2016-03-29-前海-3.JPG)
+<img src="https://github.com/comacros/comacros.github.io/raw/master/images/2016-03-29-前海-1.jpg" alt="前海-1" onclick="javascript:enlarge(this)" class="toEnlarge" >
+<img src="https://github.com/comacros/comacros.github.io/raw/master/images/2016-03-29-前海-2.jpg" alt="前海-2" onclick="javascript:enlarge(this)" class="toEnlarge" >
+<img src="https://github.com/comacros/comacros.github.io/raw/master/images/2016-03-29-前海-3.jpg" alt="前海-3" onclick="javascript:enlarge(this)" class="toEnlarge" >
