--- a/_posts/2016-03-29-恭王府.md
+++ b/_posts/2016-03-29-恭王府.md
@@ -3,4 +3,4 @@ layout: post
 title: 恭王府
 ---
 
-![恭王府](https://github.com/comacros/comacros.github.io/raw/master/images/2016-03-29-恭王府.JPG)
+<img src="https://github.com/comacros/comacros.github.io/raw/master/images/2016-03-29-恭王府.JPG" alt="恭王府" onclick="javascript:enlarge(this)" class="toEnlarge" >
