--- a/_posts/2016-04-30-YACA.md
+++ b/_posts/2016-04-30-YACA.md
@@ -3,8 +3,8 @@ layout: post
 title: 48th YACA
 ---
 
-![YACA 1](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_3889.JPG)
+<img src="https://github.com/comacros/comacros.github.io/raw/master/images/DSC_3889.JPG" alt="YACA 1" onclick="javascript:enlarge(this)" class="toEnlarge" >
 
-![YACA 2](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_3896.JPG)
+<img src="https://github.com/comacros/comacros.github.io/raw/master/images/DSC_3896.JPG" alt="YACA 2" onclick="javascript:enlarge(this)" class="toEnlarge" >
 
-![YACA 3](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_3927.JPG)
+<img src="https://github.com/comacros/comacros.github.io/raw/master/images/DSC_3927.JPG" alt="YACA 3" onclick="javascript:enlarge(this)" class="toEnlarge" >
