--- a/_posts/2016-05-02-放风筝的小女孩.md
+++ b/_posts/2016-05-02-放风筝的小女孩.md
@@ -3,5 +3,5 @@ layout: post
 title: 放风筝的小女孩
 ---
 
-![放风筝的小女孩 1/2](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_4101.JPG)
-![放风筝的小女孩 2/2](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_4103.JPG)
+<img src="https://github.com/comacros/comacros.github.io/raw/master/images/DSC_4101.JPG" alt="放风筝的小女孩 1/2" onclick="javascript:enlarge(this)" class="toEnlarge" >
+<img src="https://github.com/comacros/comacros.github.io/raw/master/images/DSC_4103.JPG" alt="放风筝的小女孩 2/2" onclick="javascript:enlarge(this)" class="toEnlarge" >
