--- a/_posts/2016-03-26-故宫角楼.md
+++ b/_posts/2016-03-26-故宫角楼.md
@@ -7,4 +7,4 @@ title: 故宫角楼
 |:------------:|:--------:|:-------------:|:---------------:|
 | 18mm         | f/5    | 1/200s          | ISO 100        |
 
-![故宫角楼](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_0766.JPG)
+<img src="https://github.com/comacros/comacros.github.io/raw/master/images/DSC_0766.JPG" alt="故宫角楼" onclick="javascript:enlarge(this)" class="toEnlarge" >
