--- a/_posts/2016-04-22-Invictus.md
+++ b/_posts/2016-04-22-Invictus.md
@@ -3,4 +3,4 @@ layout: post
 title: Invictus
 ---
 
-![Invictus](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_3590.JPG)
+<img src="https://github.com/comacros/comacros.github.io/raw/master/images/DSC_3590.JPG" alt="Invictus" onclick="javascript:enlarge(this)" class="toEnlarge" >
