--- a/_posts/2016-05-02-三裂叶蟛蜞菊.md
+++ b/_posts/2016-05-02-三裂叶蟛蜞菊.md
@@ -3,4 +3,4 @@ layout: post
 title: 三裂叶蟛蜞菊
 ---
 
-![三裂叶蟛蜞菊](https://github.com/comacros/comacros.github.io/raw/master/images/DSC_3989.JPG)
+<img src="https://github.com/comacros/comacros.github.io/raw/master/images/DSC_3989.JPG" alt="三裂叶蟛蜞菊" onclick="javascript:enlarge(this)" class="toEnlarge" >
